--- a/css/myweb.css
+++ b/css/myweb.css
@@ -830,6 +830,7 @@
     top: 0;
     height: 100%;
     background-color: var(--main-color);
+    transition: width 0.3s linear;
   }
   /* End Skills */
   /* Start Work Steps */
